--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,11 +22,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
-                    0 2px 2px rgba(0,0,0,0.12), 
-                    0 4px 4px rgba(0,0,0,0.12), 
-                    0 8px 8px rgba(0,0,0,0.12),
-                    0 16px 16px rgba(0,0,0,0.12);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     
         #QR-code {
             width: 288px;
