--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,7 +22,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        box-shadow: 0px 1px 3px 10px rgba(0, 0, 0, 0.1);
     
         #QR-code {
             width: 288px;
