--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,7 +22,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        box-shadow: 0px 1px 3px 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 11px 20px 16px rgba(0, 0, 0, 0.05);
     
         #QR-code {
             width: 288px;
@@ -46,24 +46,30 @@ body {
             color: $Grayish-blue;
         }
     }
-    .attribution { 
-        font-size: 11px; 
-        text-align: center; 
-        background-color: $Dark-blue;
+    footer {
+        width: max-content;
+        height: max-content;
         position: fixed;
-        top: 0px;
-        padding: 10px;
-        border-radius: 0px 0px 6px 6px;
-        display: flex;
+        bottom: 0px;
 
-        a { 
-            color: #3e52a3; 
-            font-size: 1.8rem;
-        }
-        p { 
-            color: $White; 
-            font-size: 1.8rem;
-            margin: 0px 5px;
+        .attribution { 
+            font-size: 11px; 
+            text-align: center; 
+            background-color: $Dark-blue;
+            padding: 10px;
+            border-radius: 9px 9px 0px 0px;
+            display: flex;
+
+            a { 
+                color: #4c65c9; 
+                text-decoration: none;
+                font-size: 1.8rem;
+            }
+            p { 
+                color: $White; 
+                font-size: 1.8rem;
+                margin: 0px 5px;
+            }
         }
     }
 }
